# ChangeLog for sys-apps/lm_sensors
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/lm_sensors/ChangeLog,v 1.144 2015/03/21 12:01:05 polynomial-c Exp $

*lm_sensors-3.3.5 (21 Mar 2015)

  21 Mar 2015; Lars Wendler <polynomial-c@gentoo.org> -lm_sensors-3.3.1.ebuild,
  +lm_sensors-3.3.5.ebuild,
  +files/lm_sensors-3.3.5-sensors-detect-gentoo.patch, -files/sensord-3-init.d,
  -files/fancontrol-init.d:
  Long overdue version bump (bug #499620). Removed old.

  24 Nov 2013; Pacho Ramos <pacho@gentoo.org> lm_sensors-3.3.3-r3.ebuild:
  x86 stable, bug #480104

  25 Sep 2013; Agostino Sarubbo <ago@gentoo.org> lm_sensors-3.3.3-r3.ebuild:
  Stable for ppc, wrt bug #480104

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> lm_sensors-3.3.3-r3.ebuild:
  Stable for sparc, wrt bug #480104

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> lm_sensors-3.3.3-r3.ebuild:
  Stable for alpha, wrt bug #480104

  21 Sep 2013; Agostino Sarubbo <ago@gentoo.org> lm_sensors-3.3.3-r3.ebuild:
  Stable for amd64, wrt bug #480104

*lm_sensors-3.3.4-r1 (17 Sep 2013)
*lm_sensors-3.3.3-r3 (17 Sep 2013)

  17 Sep 2013; Pacho Ramos <pacho@gentoo.org> +lm_sensors-3.3.3-r3.ebuild,
  +lm_sensors-3.3.4-r1.ebuild, -lm_sensors-3.3.3-r2.ebuild,
  -lm_sensors-3.3.4.ebuild, files/sensord-4-init.d:
  Fix init.d script (#455120 by Chris Mayo)

*lm_sensors-3.3.4 (25 Jul 2013)

  25 Jul 2013; Justin Lecher <jlec@gentoo.org> +lm_sensors-3.3.4.ebuild,
  +files/lm_sensors-3.3.4-sensors-detect-gentoo.patch, metadata.xml:
  Version BUmp, #474490

  13 Jul 2013; Pacho Ramos <pacho@gentoo.org> +files/fancontrol.service,
  +files/sensord.service, lm_sensors-3.3.3-r2.ebuild:
  Install unit file (#455632)

  19 Feb 2013; Zac Medico <zmedico@gentoo.org> lm_sensors-3.3.3-r2.ebuild:
  Add ~arm-linux keyword.

*lm_sensors-3.3.3-r2 (31 Jan 2013)

  31 Jan 2013; Diego E. Pettenò <flameeyes@gentoo.org>
  +lm_sensors-3.3.3-r2.ebuild, -lm_sensors-3.3.3-r1.ebuild,