@@ -1,37 +1,33 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+AUX fancontrol-init.d 726 SHA256 b231b76d5b32bb303a8e42727f48a4405cec71eedfe392e837acba5e46532783 SHA512 e74d23ed78e066b903eb73e82ab9125bbaf81d86608fb0695314be20e06b777972547889fcfdf8271bcfd53b76a6a9db295f614ce7b73ea31b4d589009a5eb90 WHIRLPOOL a907d23f0d2d2ff636d40acda37956dc4854f08aa5a232a339a2fe83a1f657bce347bd79d23822205ea8603a16aac33f996d3607f826cdaf034c5c4f6047d9ec
 AUX fancontrol-init.d-2 560 SHA256 36d489296c31736f8015b0ce27052b3f1555b7fe6335120c0477b044b8e4fb8d SHA512 95f54da52993a9a39f3cc80caeac0e60ba11f158692df773564e981810e01371703fa50995388978edf08d122df64cffcbfd82a36e0cd61f76e8a9e7b11f23a8 WHIRLPOOL d6af2f05dec9418965695328f6ffd0a700126dcf885e92317bfc78743a5d885f27e2c65f7339a5e66c1cb77522bfc3c176285c4643af443b167fe45aeab8df43
 AUX fancontrol.service 150 SHA256 d07fb50714abfcac5d8aa818d6c40de08221401b554cb21f85dbf2a6cf2eef87 SHA512 e6a738c2458ecffa56d79ab0b187c20a7daebca737bac1a87c82fda5bae24ad4f2a61fd6daeab0a8e5582c404d57372f5eda1a66fe74ccbcb948c114d3e6a0cd WHIRLPOOL 7fb0f1170dbfca825ac245e257e275c58c76adb0bb550434b23d25cf317dffb0319bc9934da6393f279dea85aa6313941b7ff713bfcd9c8e70f36ebcb2c3e7b8
 AUX lm_sensors-3-init.d 2466 SHA256 9b018f9f7a0975988387858823fe59a5cd8af6413d8c3170db0e24aac6021ec3 SHA512 16b3c7f742c70abcd310928be32fc63b0d344447776bc380be20f8708fbb72bc9b07ddec5ad867cfdc44247474aea3ff5d4f8b405cab896c07791a7a1834db7f WHIRLPOOL 3a090000cc486389a8630f3d88df486cd63458710d1cfb05b8dc545a758fee646698854fd6a13d23b9ff78265ed04aa79c0119acd4a9355fcb51847f2f095b0d
 AUX lm_sensors-3.3.1-sensors-detect-gentoo.patch 4906 SHA256 39f8674e526aa837493a5009b7465f7c8f04784c5990de8a6b8c885c5d8b44a7 SHA512 3d502f1271e06e74ef290efe7d634a55e5b1e017111c409fc26233416d9680e1a102ee1ba68986ca37f787a27d3e3325ba22ceb46e28d3a0d074dc92608f25f2 WHIRLPOOL 7df804767d16890b4420810b6e50797f0dbff4f525de6c41a5ec36e73319a44b5cff4f997a3dbe18e34835dfe3e07a7b8a296aa41f0c46a84c797fe8bcd0c909
 AUX lm_sensors-3.3.4-sensors-detect-gentoo.patch 4551 SHA256 cb170946b67fdc31fd42f174e1ef2ab40efb733c0db081fac4fa2b8ab7883e52 SHA512 15d4dfcebab8b89d6eca536256e92353e9abedda328fcb84629c0aff3e01fafaacb4df4caae9044bdcafb9b4a2fb660880e8e234ff8d797c26d616336f88d49a WHIRLPOOL 05d7eb12c54debaf2a6ee81f8fb954e0c02425f22930c271f111366a03832bd8db94e5163134e514bda634b6aa71afdeaeb94232b02e4e6cd825b1b8533ebb3e
 AUX lm_sensors-3.3.5-sensors-detect-gentoo.patch 4533 SHA256 2dd57576a76ad8d5da796f83c0324ed047d7b0bfdeb988a3c98ac90d3d4b701d SHA512 3a6f54d745e1a82b56d7ff2fd7b7f91e8fb680849946228ea1339becceb72adc1c37f42fb1e9963a89dec475faa5fbcb25dacd82aca4ea07ec96d9ec29cf22f0 WHIRLPOOL ed92561c9b5bbd913a9dbdaf142ac63d0321692c44528246d34e45564c455b46e614d68b349eb92ff5c855b574c735e1b8d9ef1b5a8c87d3323638a52d1873f4
+AUX sensord-3-init.d 712 SHA256 8a3debf0b84af9944a467e377b0e4b0db67d428083675f0fcf33ec55a8b2a709 SHA512 d442053fce522f4133eb38220b7acd7bcf626fd00297eaa42ab191568bd9cd3b3592831269e5e73a6dd9885c64f7dd8745b542cee321a5daf21ecb189192d452 WHIRLPOOL dc48de372d732e9b883f5db1e06159b6d6df72c2f4ad92cae6290ee352b7f531bb2e3a94b3425bcd9400a58f8549f094948b2b3c930c80b7d4f9e181cc0be2df
 AUX sensord-4-init.d 565 SHA256 4bd482a54decc5a51aee60e19ae31b0182d5857b112754247f04c0829b159b07 SHA512 e46e216618ef6cd6a1126cdf3dddc83dbff5f5e9ab609022d58c93fdf6bf9891c26e1f10ff1832512838a0cb6685f4d99baed1fe0ad3e195bfdc30f26b282a01 WHIRLPOOL d558aebd9545c3812cd81277eac07affda1c259c816518f1bc910b2efb8c708370a0575cd31abb512a24885178a5a149e7789cc5a5625329e33755b638564b8a
 AUX sensord-conf.d 104 SHA256 02230edf5efbb0a4de3840cd76f9ebf431c57a246fa7388e9dbeb0fe26fe7b8d SHA512 a77d81ab7ded085ba19e4c637e93268f889ccb8ce9e008a210ae135cb6e2140be07e5d455cf7fcc1084fd57cfbfb3f2bb37207123aebe9566f78b5183806fd7d WHIRLPOOL b52a37909dd45c3f7a6a3cab4695e460cf318f05b00faf25aa0717a5caaa1f185b32648711f4842d69e4aa4a062abbf39278fd903b3b07bd8389be73d4777907
 AUX sensord.service 159 SHA256 db38a15de6d311d91f336f708f63e732000731a1f07a5e7d7ac911faf58ddca3 SHA512 c554910a36e44d84f64d5c8924170c3eaccf9715aee2157a37ecf542a1d254c0d9a269555ec3e99165ef7e39874616bc07dddc01c8d708114232df58232c3906 WHIRLPOOL 1cffd3b9a62eba01af22237221980f1cbeb29738e65510532795a39ad9ea7fd72beafd2180a4342164abe9a1f6a1e11048fe3e75b342760add0548dc61e21c14
+DIST lm_sensors-3.3.1.tar.bz2 170156 SHA256 cfcc783945f7bfd5206e73f8f9d3f353b0dbf22153c0ef2587a8d7a7be7e628f SHA512 7ac328104613738409aa63881a42f86a97059cfaf48ccf0c2b21861b80813e64ce4dd5abe3359d1836462f6b6113814162c35740f2cd6e6ada9ec25b68faa579 WHIRLPOOL 9ee1d2e4ec121439b4262db6f2e17ec357570f7ffc39ab8575e1ab43153e5392f6fa769ade71ccb815cd1a7e64c3ec1374536b78dd1fbbaf610f557bed355ac9
 DIST lm_sensors-3.3.3.tar.bz2 172467 SHA256 ecc91ba3d918e96fb7d5eb9acce978af803b130e0b33b08d5ea05b2bfca84955 SHA512 22996d4ded0df4302aa35b78dfbffe35ac27ceb72a23ca14d2ca83a41a5f7a1cf01a5e42dafa6cba91da81d27ddcdf14a7b4a41deebcd64f75c26bb6c35848c5 WHIRLPOOL b109ba91839c411f1a5d5e784b162b1c7da31768e366d55810e0574bae2e19fe106db46c994bc571fcab2900aa50a4ed5eba0dee40f7e2158a74c5dac69340cd
 DIST lm_sensors-3.3.4.tar.bz2 172226 SHA256 b4608610cb5de4b24e3fe1ae357712e8633a8a929bbb42df5eecc4ccee6ba76d SHA512 a375f747a1687da0fe743d731893156f7983e001725c2d7cd284cefd3e8922deb3dfe542d3c901e3da8fff321633d64180a637d780b5e1bb3f1e9a254c16b7e6 WHIRLPOOL 4011264a56c36ffcfe28d357ceae1929fdf8a21c27bfaba928c9a7b48ef2b8422cd6650981a4c8f220900cc45526ca4bbfda9810b54db0efaf15cdaad4599838
 DIST lm_sensors-3.3.5.tar.bz2 173609 SHA256 5dae6a665e1150159a93743c4ff1943a7efe02cd9d3bb12c4805e7d7adcf4fcf SHA512 0874084c3dd40b93ed05e1955f76e35e78ac3ac2343341d8ab5412fd941ea300b3a4b1320bec3a5bfb07309e82f42cc5dac0a728cdfddac4053d4fdb96dc12e7 WHIRLPOOL f82d0d1a4b7647cf9076f16861024dd65fd97bd34a7498fcc06e851913f5b71805689d915b67a628b6cd7aea2b46225d64df8833550c785236311c9980ac8ed1
+EBUILD lm_sensors-3.3.1.ebuild 3221 SHA256 cd4fc8f20f7cd7f20ff31e87a1a8aa568da7f3288034a7f838fb97b599ef524a SHA512 4d2cc6bc64fce605a40c3f15a66982bb4d83cfa4e11e9f389213b2bd76f4cd8192c875befc5bb01ab997b37f65b63e54eeba6e78bc16f95717f8ce75af35b078 WHIRLPOOL ff7c7369b9f9dac4ef1e7fa10d0d58381e25ddf0188f6db28c2010b8d6f3c3334d29ed7792792f84b6a320e5fcec7bc496dc95f3fb85df60259862c7dbd508cf
 EBUILD lm_sensors-3.3.3-r3.ebuild 3411 SHA256 45a37880f51081314a5fedc840adf411e086dec06bd46d616df568a25d7f4350 SHA512 99aecf9203785d3472eeb46913d980d6e952b5758bbec3da5af19e213452266adf760ef1fe573fbaebd440f9ccba83bb541fa065fcbaa70469369ded0ef4317f WHIRLPOOL a8f4fa1e61b1968c6de6ab1aa2de459415197bb72ff6eec4521eb972d24ecff85e68b68198e2c1fb1ff7495d5918753b83aa14e1063b8634df7c47440c02a602
-EBUILD lm_sensors-3.3.4-r1.ebuild 3376 SHA256 bf133d1bfc2b12fc2fd8f986f0280131545168b653a312de02da7b0fcc703771 SHA512 c3fbea5a36dd589ff4cc30a3a0b81e1239776b2646a1e80f7b6d4860c67e24fa5e20e8666600fc4f292ad1d66f2880e196320251a5ab9bb88abd999c57f31084 WHIRLPOOL c5a7675fcad8997209b7ea3a501295a0645a2ed249cc225d1a4e482029d4893d7ad0d574f285ab39c1b9ecf7a85d1c4a81b05d2aeaf312f5edcff73b86507319
+EBUILD lm_sensors-3.3.4-r1.ebuild 3377 SHA256 9907930e9325164f60d90021a6141a82cb564a7152cfe66190dc6c9efbd71023 SHA512 a4bbd1580db894d2928de59fd19c882f084ac841222fe82777dec9bc7755fd89c59cb20c76ace750659b81a8b18bbfdb27cafb1c7567767a4f8af9f191a5c135 WHIRLPOOL bfa0cf96f9f0720a2a2ad34c8a646bfe19ff6b95b3234ebc0af6c6857329c173d7507cabdab180e9f6500e22381ab7fc29ca4c2481fec54a7ff87fd41196d991
 EBUILD lm_sensors-3.3.5.ebuild 3380 SHA256 b5712ba2ab6de606b6442eeaee140025da4c388b7a9788bec5530fff5022e76d SHA512 343c1387fc4903a95dc7229abc9d9ad59b51841ffba656779f3d7244cba4300a60f2f576f2c2e4cf07c4455cb20201d7fda3e2478f02e9e126e841faab63fa9f WHIRLPOOL 9f4a630d866c133907a39f6941d89513d55597844225c4898f59c8d94b2e36f6ac18e50cae2e231f27ed3d69ad63d27bbebc190d0514542462951d679a1a626f
-MISC ChangeLog 17865 SHA256 30e78dee2c0feced3d90ddf5d53aeac086da6880172cea9fbb9a5def15419573 SHA512 c62ad4842695f6fdf252ad426669fead7ad636a73ac24b6dd3fa599e14c72ebabc3d846bee1ddbf8ea013f8c05eee8aa75656770ccee5760b34550c6d7d6cca1 WHIRLPOOL dd381f36d538433e487f1951b48d9192dbadf703538b3202a62f426ed1c437929b6a0631e649eb5732508bee650e160d94aee4c937eea386714cf514467512dd
+MISC ChangeLog 17970 SHA256 5a7d47f4782d765eade65d833c53966b1d22880bbe4d748a87a7b240626d2742 SHA512 089e6fcbde6e44ab699b009a015ddf99569819ac7c365e2244c0437582e54073eb3c5d6fd8b6e7d277841b657bc7c414e4f3ed508c9f52c049ad08f2db887588 WHIRLPOOL 9bc147c2df639b6d2c423832e78f4c058e7d70bb469a65ad4c184f57e65e295e0f466277b57e340ccd0857c6409021b16300d240397e8da4e1373ba28d6259e3
 MISC metadata.xml 410 SHA256 f05e3f69561089eb80bc472abdb1b3f839fe4c578e37d605b05706e882c0f75f SHA512 95c7b8825b4080354c17ec5fad4c9c61cad70be636cd5183590b396659a0cb0dd31f6ebc9f43e1523a67223b7884c9271fb9e39f7c46a5b06807072f1f37ae37 WHIRLPOOL 04f7612059bc1af386643c2165b91a169741a65bbdb40e878c2dbd6044a95a58b17149b3a0f6709df07c6bc8e39d63c025eb42ff26399e64cf7c41f424cf816e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVDV2CAAoJEPiazRVxLXTF1sIP/1T1NX50Hh/idb174KA2C86X
-hdCngfI+UO01CWBy6DbthhbUIyazRJJKztvLe3Z9mNp9sJUxE/xK0pnsaWL4s8gG
-5i5PKzIOY3i88oThRhJC+hMB7qDnK+NIbvDgaL3fwnv9PZ4xvfB0kfu0m48927H2
-folkqxZQDCZJ3SXdfeSNzaKtEYbA4cZ/pgiY35aK8az3/nFPSkPUinlK/p7KnxcP
-MD6O1hIv5RLppRwrlU1rmCdEcfKErXDMlT91lAa/fVDXCnzaqTTEWQI+GIi3FYkh
-EWuFjHn4OitrlZKD7Il98Hs6vf41F7mGwPZcdcVzVXzbdEBqSJMZOMHRcn+Vwomc
-lipt2ELzwaJhimhY/o8Tl1GVHXv/TJh8GWu2XUNOgraGfoMFRQ/L620LD/FBjObz
-b6f3f/Gh50712saar7Zx6fJu4siIREU6L3AxRjgTe0Ir2DgAMAaJ1tXfBqrfknEF
-3fZCCuOzWhWu599igt6tsHQNMPWI/NIBWAaOn9WCchfMEztRxf8Ws6CxCDm+0GOV
-0Rc3h4roNyqHiLbXCqjeYPPfKdTu79u665VFH/f87hhN9MQ6T4twPGjgyjuMyLwB
-c8eskeaHbzsRc8TQ9m+YrROQJordoVvn+XYQNc0UjIyN3UKCqOCDBhU3dtE/Ts2E
-h5cN3Yq0dNwNvK00II6a
-=ZYGT
+iJwEAQEIAAYFAlUNi0EACgkQG9wOWsQutdYUtAQAsS5oKjCqmWlEWycoSRjELIgB
+Ey3dCNLTteFanRSbvJVr+ZwN3Z424/RoZoe3HEWzQD2xRwtcYjAGdftIUyHXB8rv
+y1EZS7XCUY3qPjEsoJvlKUOuEpuCP+8L29/k+3IVD+jAW0Li4zNhrDnkZLrf+VR0
+h7lEguUPudUMs7cBYh4=
+=eFlY
 -----END PGP SIGNATURE-----
