@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/lm_sensors
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/lm_sensors/ChangeLog,v 1.144 2015/03/21 12:01:05 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/lm_sensors/ChangeLog,v 1.145 2015/03/21 15:18:04 zlogene Exp $
+
+  21 Mar 2015; Mikle Kolyada <zlogene@gentoo.org> lm_sensors-3.3.4-r1.ebuild:
+  amd64 stable wrt bug #544014
 
 *lm_sensors-3.3.5 (21 Mar 2015)
 
